--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 A collection of my Unix configuration files (colloquially known as 'dotfiles').
+
+Files are categorised as follows:
+* linux2 - Linux-specific dotfiles
+* darwin - Mac OS X-specific dotfiles
+* os_agnostic - dotfiles which will (hopefully) work on all OSs
